--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -5,7 +5,7 @@
   .col-md-6.d-flex.justify-content-center
     a.m-3.nav-link(href="/") หน้าแรก
     a.m-3.nav-link(href="") ค้นหา
-    a.m-3.nav-link(href="") ลงทะเบียนปริญญานิพนธ์
+    a.m-3.nav-link(href="/book") ลงทะเบียนปริญญานิพนธ์
   .col-md-2.text-end.m-2
     .dropdown
       button.btn.btn-secondary.dropdown-toggle(type='button' data-bs-toggle='dropdown' aria-expanded='false')
