--- a/views/book.pug
+++ b/views/book.pug
@@ -1,1 +1,23 @@
-extends layout/main
+doctype html
+html
+  head
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    style.
+      body, html {
+      height: 100%;
+      margin: 0;
+      }
+      .bg {
+      /* The image used */
+      background-image: url("https://bestanimations.com/media/books/402238143pretty-book-bench-nature-water-outdoors-animated-gif.gif");
+      /* Full height */
+      height: 100%;
+      /* Center and scale the image nicely */
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      }
+  body
+    .bg
+    p
+      | This example creates a full page background image. Try to resize the browser window to see how it always will cover the full screen (when scrolled to top), and that it scales nicely on all screen sizes.
