--- a/views/layout/_html.pug
+++ b/views/layout/_html.pug
@@ -6,6 +6,6 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css")
     title Document
-  body.bg-dark.bg-opacity-75
+  body
     block body
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js")
