--- a/views/register.pug
+++ b/views/register.pug
@@ -1,7 +1,6 @@
 extends layout/form
-
 block content
-    a(href="/") <--เข้าสู่ระบบ
+    a(href="/login") <--เข้าสู่ระบบ
     h4 สมัครสมาชิก
     include components/alert
     form(action="/register", method="post")
