--- a/views/user.pug
+++ b/views/user.pug
@@ -24,3 +24,5 @@ block content
                     button.btn.btn-primary.mt-2 บันทึกรหัสผ่าน
         if !user.oauth.google
           a.btn.btn-light(href="/login/google") ผูกบัญชี Google #[img(src="https://www.pngplay.com/wp-content/uploads/12/Google-PNG-Photos.png" style="width:50px")]
+        .text-center
+          button.btn.btn-warning แก้ไขข้อมูล
