add logo facebook google login

--- a/views/login.pug
+++ b/views/login.pug
@@ -15,5 +15,7 @@ block content
         a.m-3(href="/register") สมัครสมาชิก.
     hr
     .text-center.d-flex.justify-content-evenly
-      a.btn.btn-primary(href="/login/facebook") Login with Facebook
-      a.btn.btn-primary(href="/login/google") Login with google
+      a.btn.btn-primary(href="/login/facebook")
+        img(src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Facebook_Logo_%282019%29.png/1024px-Facebook_Logo_%282019%29.png" style="width:35px")
+      a.btn.btn-light(href="/login/google")
+        img(src="https://www.pngplay.com/wp-content/uploads/12/Google-PNG-Photos.png" style="width:35px")
