fix responsive sidebar

--- a/views/index.pug
+++ b/views/index.pug
@@ -64,21 +64,21 @@ block content
         .row
           .col-md-3.text-center
             h1 นักศึกษา
-            .d(style='height:240px')
-              img.img-thumbnail(src="/tar.jpg" style="width:170px", alt="" )
+            .d(style='height:250px')
+              img.img-thumbnail(src="/student.png" style="width:170px", alt="" )
             p จัดเก็บประวัตินักศึกษา บัณฑิตมหาวิทยาลัยราชมงคลสุวรรณภูมิ ที่จัดทำวิทยานิพนธ์หรือการค้นคว้าอิสระ พร้อมรายการความก้าวหน้าในการดำเนินการจัดสอบ
           .col-md-1.d-flex.justify-content-center
             div(style='border-left: 3px solid purple;height: 410px;')
           .col-md-3.text-center
             h1 อาจารย์
-            .d(style='height:240px')
+            .d-flex.align-items-center(style='height:250px')
               img.img-thumbnail(src="/teacher.png" style="width:400px", alt="")
             p จัดเก็บประวัติอาจารย์ที่ปรึกษา ประวัติการเป็นอาจารย์ที่ปรึกษา ประวัติการศึกษา และประวัติความเชี่ยวชาญเพื่อเป็นฐานข้อมูลในการตัดสินใจในการเลือกอาจารย์ที่ปรึกษา
           .col-md-1.d-flex.justify-content-center
             div(style='border-left: 3px solid purple;height: 410px;')
           .col-md-3.text-center
             h1 ปริญญานิพนธ์
-            .d(style='height:240px')
+            .d-flex.align-items-center(style='height:250px')
               img.img-thumbnail(src="/thesis.jpg" style="width:350px", alt="")
             p จัดเก็บหัวข้อวิทยานิพนธ์ ผู้จัดทำ อาจารย์ที่ปรึกษา คณะกรรมการสอบ วันที่สอบโครงร่าง และวันที่สอบจบ
 
