--- a/views/manage.pug
+++ b/views/manage.pug
@@ -1,19 +1,23 @@
-extends layout/admin
+extends layout/main
 block content
-  .container
-    .card.mt-3
-      .card-body
-        h1.text-center ข้อมูลปริญญานิพนธ์ทั้งหมด
-        table.table
-          thead
-            tr
-              th(scope='col')
-              th(scope='col') ชื่อปริญญานิพนธ์
-              th(scope='col') ผู้จัดทำ
-              th(scope='col') สถานะ
-          tbody
-            tr
-              th(scope='row') 1
-              td
-              td #{user.firstname} #{user.lastname}
-              td true or false
+  .row
+    .col-md-3
+      include ./components/sidebar
+    .col-md-7
+      .container
+        .card.mt-3
+          .card-body
+            h1.text-center ข้อมูลปริญญานิพนธ์ทั้งหมด
+            table.table
+              thead
+                tr
+                  th(scope='col')
+                  th(scope='col') ชื่อปริญญานิพนธ์
+                  th(scope='col') ผู้จัดทำ
+                  th(scope='col') สถานะ
+              tbody
+                tr
+                  th(scope='row') 1
+                  td
+                  td #{user.firstname} #{user.lastname}
+                  td true or false
