add activate sidebar

--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -18,7 +18,7 @@
           li
             a.dropdown-item(href='/status') เช็คสถานะการลงทะเบียน
           li
-            a.dropdown-item(href='/manage') จัดการข้อมูลผู้ดูแลระบบ
+            a.dropdown-item(href='/managebook') จัดการข้อมูลผู้ดูแลระบบ
           li
             a.dropdown-item.text-danger(href='/logout') ออกจากระบบ
       else
