--- a/views/managebook.pug
+++ b/views/managebook.pug
@@ -3,6 +3,11 @@ block content
   .row
     .col-md-3
       include ./components/sidebar
+      .sidebar
+        a.active(href='/managebook') ข้อมูลปริญญานิพนธ์
+        a(href='/managefac') ข้อมูลคณะ
+        a(href='/manageteacher') ข้อมูลอาจารย์
+        a(href='/manageuser') ข้อมูลสมาชิก
     .col-md-7
       .container
         .card.mt-3
