--- a/views/manageteacher.pug
+++ b/views/manageteacher.pug
@@ -10,3 +10,27 @@ block content
         a(href='/manageuser') ข้อมูลสมาชิก
     .col-md-7
       .container
+        .card.mt-3
+          .card-body
+            h1.text-center ข้อมูลอาจารย์ทั้งหมด
+            h4 เพิ่มข้อมูลอาจารย์
+            form(action="/addteacher", method="post")
+              .d-flex
+                input.form-control.form-control-sm(type="text" name="faculty_name" placeholder="ชื่อ" required)
+                div(style="width:5px")
+                input.form-control.form-control-sm(type="text" name="faculty_name" placeholder="นามสกุล" required)
+                div(style="width:5px")
+                button.btn.btn-success(type="submit") +
+            table.table.mt-3
+              thead
+                tr
+                  th(scope='col') ลำดับ
+                  th(scope='col') ชื่อ
+                  th(scope='col') สกุล
+                  th(scope='col')
+              tbody
+                tr
+                  th(scope='row')
+                  td
+                  td
+                  td
