--- a/views/manageteacher.pug
+++ b/views/manageteacher.pug
@@ -9,6 +9,7 @@ block content
         a.active(href='/manageteacher') ข้อมูลอาจารย์
         a(href='/manageuser') ข้อมูลสมาชิก
         a(href='/managedowload') ข้อมูลการดาวน์โหลด
+        a(href='/managerefer') ข้อมูลการขอสิทธิ์
     .col-md-7
       .container
         .card.mt-3
