--- a/views/managefac.pug
+++ b/views/managefac.pug
@@ -9,6 +9,7 @@ block content
         a(href='/manageteacher') ข้อมูลอาจารย์
         a(href='/manageuser') ข้อมูลสมาชิก
         a(href='/managedowload') ข้อมูลการดาวน์โหลด
+        a(href='/managerefer') ข้อมูลการขอสิทธิ์
     .col-md-7
       .container.mt-3
       include components/alert
