--- a/views/managerefer.pug
+++ b/views/managerefer.pug
@@ -8,31 +8,34 @@ block content
         a(href='/managefac') ข้อมูลคณะ
         a(href='/manageteacher') ข้อมูลอาจารย์
         a(href='/manageuser') ข้อมูลสมาชิก
-        a.active(href='/managedowload') ข้อมูลการดาวน์โหลด
-        a(href='/managerefer') ข้อมูลการขอสิทธิ์
+        a(href='/managedowload') ข้อมูลการดาวน์โหลด
+        a.active(href='/managerefer') ข้อมูลการขอสิทธิ์
     .col-md-7
       .container
         .card.mt-3
           .card-body
-            h1.text-center ข้อมูลการดาวน์โหลดทั้งหมด
+            h1.text-center ข้อมูลการขอสิทธิ์อ้างอิงทั้งหมด
             -let i = 0
               table.table.mt-3
                 thead
                   tr
                     th(scope='col') ลำดับ
                     th(scope='col') ชื่อเล่ม
-                    th(scope='col') ชื่อผู้โหลด
-                    th(scope='col') วันที่โหลด
+                    th(scope='col') ชื่อผู้ขอสิทธิ์
+                    th(scope='col') วันขอสิทธิ์อ้างอิง
                     th(scope='col') เวลา
+                    th(scope='col')
                 tbody
-                  each bookdowload in bookdowloads
-                    -var d = new Date(bookdowload.createdAt)
+                  each bookrefer in bookrefers
+                    -var d = new Date(bookrefer.createdAt)
                     -var momth = ['มกราคม','กุมภาพันธ','มีนาคม','เมษายน','มิถุนายน','กรกฎาคม','สิงหาคม','กันยายน','ตุลาคม','พฤศจิกายน','ธันวาคม']
                     -var time = d.getHours()+':'+d.getMinutes()
                     -var day = d.getDate()+' '+momth[(d.getMonth()-1)]+' '+d.getFullYear()
                     tr
                       th(scope='row')=i=i+1
-                      td=bookdowload.bookname
-                      td=bookdowload.firstname+' '+bookdowload.lastname
+                      td=bookrefer.bookname
+                      td=bookrefer.firstname+' '+bookrefer.lastname
                       td=day
                       td=time
+                      td
+                        a.btn.btn-primary.btn-sm(href="/") ดูรายละเอียด
