--- a/views/user.pug
+++ b/views/user.pug
@@ -17,6 +17,9 @@ block content
           h4(style="width:90px;") มือถือ
           h4 : 0#{user.phonenumber}
         .d-flex
+          h4(style="width:90px;") มหาลัย
+          h4 : #{user.university}
+        .d-flex
           h4(style="width:90px;") คณะ
           h4 : #{user.faculty}
         .d-flex
