--- a/views/registerout.pug
+++ b/views/registerout.pug
@@ -11,50 +11,40 @@ block content
     form.mt-3(action="/register", method="post")
       .row.g-2
         .col-md-6.form-floating
-          input#floatingEmail.form-control(type='email' placeholder='name@example.com' name="email")
+          input#floatingEmail.form-control(type='email' placeholder='name@example.com' name="email" required)
           label(for='floatingEmail') Email
         .col-md-6.form-floating
-          input#floatingPassword.form-control(type="password", name="password" placeholder="รหัสผ่าน")
+          input#floatingPassword.form-control(type="password", name="password" placeholder="รหัสผ่าน" required)
           label(for='floatingPassword') รหัสผ่าน
       .row.mt-2.g-2
         .col-md-6
         .col-md-6.form-floating
-          input#floatingConfirmPassword.form-control(type="password", name="confirmpassword" placeholder="รหัสผ่าน")
+          input#floatingConfirmPassword.form-control(type="password", name="confirmpassword" placeholder="รหัสผ่าน" required)
           label(for='floatingConfirmPassword') ยืนยันรหัสผ่าน
       .row.mt-2.g-2
         .col-md-6.form-floating
-          input#floatingConfiFirstname.form-control(type="text", name="firstname" placeholder="ชื่อ")
+          input#floatingConfiFirstname.form-control(type="text", name="firstname" placeholder="ชื่อ" required)
           label(for='floatingFirstname') ชื่อ
         .col-md-6.form-floating
-          input#floatingLastname.form-control(type="text", name="lastname" placeholder="นามสกุล")
+          input#floatingLastname.form-control(type="text", name="lastname" placeholder="นามสกุล" required)
           label(for='floatingLastname') นามสกุล
       .row.mt-2.g-2
         .col-md-12.form-floating
-          input#floatingNumber.form-control(type="number", name="phonenumber" placeholder="เบอร์มือถือ")
+          input#floatingNumber.form-control(type="number", name="phonenumber" placeholder="เบอร์มือถือ" required)
           label(for='floatingNumber') เบอร์มือถือ
       .row.mt-2.g-2
         .col-md-12.form-floating
-          input#floatingNumber.form-control(type="text", name="universirty" placeholder="ชื่อมหาวิทยาลัย")
+          input#floatingNumber.form-control(type="text", name="university" placeholder="ชื่อมหาวิทยาลัย" required)
           label(for='floatingNumber') มหาวิทยาลัย
       .row.mt-1.g-2
         .col-md-6.form-floating
-          select#floatingSelect.form-select(name='faculty')
-            option(selected='') กรุณาเลือก
-            option(value='บริการธุรกิจและเทคโนโลยีสารสนเทศ') บริการธุรกิจและเทคโนโลยีสารสนเทศ
-            option(value='วิทยาศาสตร์') วิทยาศาสตร์
-            option(value='วิศวะกรรม') วิศวะกรรม
+          input#floatingNumber.form-control(type="text", name="faculty" placeholder="ชื่อคณะ" required)
           label(for="floatingSelect") เลือกคณะ
         .col-md-6.form-floating
-          select#floatingSelect.form-select(name='branch')
-            option(selected='') กรุณาเลือก
-            option(value='ระบบสารสนเทศ') ระบบสารสนเทศ
-            option(value='บัญชี') บัญชี
-            option(value='...') ...
+          input#floatingNumber.form-control(type="text", name="branch" placeholder="ชื่อสาขา" required)
           label(for="floatingSelect") เลือกสาขา
       .d-flex.justify-content-center
         button.btn.btn-primary.mt-3 สมัครสมาชิก
-
-
       //- label.form-label(for="email") อีเมล
       //- input.form-control(id="email" type="email", name="email" required)
       //- .mt-2
