--- a/views/status.pug
+++ b/views/status.pug
@@ -7,15 +7,21 @@ block content
           table.table
             thead
               tr
-                th(scope='col')
+                th(scope='col') ลำดับ
                 th(scope='col') ชื่อปริญญานิพนธ์
                 th(scope='col') ผู้จัดทำ
                 th(scope='col') สถานะ
             tbody
-              tr
-                th(scope='row') 1
-                td
-                td #{user.firstname} #{user.lastname}
-                td true or false
+              -var i = 0
+              each book in books
+                tr
+                  th(scope='row')=i+=1
+                  td=book.bookname
+                  td=user.firstname + " " + user.lastname
+                  if book.approve
+                    td.text-success อนุมัติแล้ว
+                  else
+                    td.text-warning รออนุมัติ
+
 
 
