--- a/views/book.pug
+++ b/views/book.pug
@@ -25,9 +25,8 @@ block content
         .form-floating.mt-3
           select#floatingSelect.form-select(name='teacher')
             option(selected='') กรุณาเลือก
-            option(value='อาจารย์มงคล') อาจารย์มงคล
-            option(value='อาจารย์นุชรัตน์') อาจารย์นุชรัตน์
-            option(value='อาจารย์ไพรฑูรณ์') อาจารย์ไพรฑูรณ์
+            each teacher in teachers
+              option(value=teacher.firstname)=teacher.firstname
           label(for="floatingSelect") อาจารย์ที่ปรึกษา
         .mt-3
           label(for="bookfile") เพิ่มไฟล์(PDF)
