--- a/views/layout/_html.pug
+++ b/views/layout/_html.pug
@@ -10,6 +10,13 @@ html(lang="en")
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='icon', href='/ruslogo.png', type='image/icon type')
     title Thesis RMUTSB
+    style.
+      a {
+      text-decoration:none;
+      }
+      a:active {
+      color: aqua;
+      }
   body(style="background-color:#f4c759;")
     block body
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js")
