--- a/views/managedowload.pug
+++ b/views/managedowload.pug
@@ -14,25 +14,27 @@ block content
       .container
         .card.mt-3
           .card-body
-            h1.text-center ข้อมูลการดาวน์โหลดทั้งหมด
+            h1.text-center ข้อมูลการขอสิทธิ์อ้างอิงทั้งหมด
             -let i = 0
               table.table.mt-3
                 thead
                   tr
-                    th(scope='col') ลำดับ
-                    th(scope='col') ชื่อเล่ม
-                    th(scope='col') ชื่อผู้โหลด
-                    th(scope='col') วันที่โหลด
-                    th(scope='col') เวลา
+                    th.text-center(scope='col') ลำดับ
+                    th.text-center(scope='col') ชื่อเล่ม
+                    th.text-center(scope='col') ชื่อจัดทำ
+                    th.text-center(scope='col') จำนวนผู้ดาวน์โหลด
                 tbody
                   each bookdowload in bookdowloads
-                    -var d = new Date(bookdowload.createdAt)
-                    -var momth = ['มกราคม','กุมภาพันธ','มีนาคม','เมษายน','มิถุนายน','กรกฎาคม','สิงหาคม','กันยายน','ตุลาคม','พฤศจิกายน','ธันวาคม']
-                    -var time = d.getHours()+':'+d.getMinutes()
-                    -var day = d.getDate()+' '+momth[(d.getMonth()-1)]+' '+d.getFullYear()
-                    tr
-                      th(scope='row')=i=i+1
-                      td=bookdowload.bookname
-                      td=bookdowload.firstname+' '+bookdowload.lastname
-                      td=day
-                      td=time
+                    if bookdowload.bookDowload[0]
+                      -var d = new Date(bookdowload.createdAt)
+                      -var momth = ['มกราคม','กุมภาพันธ','มีนาคม','เมษายน','มิถุนายน','กรกฎาคม','สิงหาคม','กันยายน','ตุลาคม','พฤศจิกายน','ธันวาคม']
+                      -var time = d.getHours()+':'+d.getMinutes()
+                      -var day = d.getDate()+' '+momth[(d.getMonth()-1)]+' '+d.getFullYear()
+                      tr
+                        th.text-center(scope='row')=i=i+1
+                        td.text-center
+                          a(href="")=bookdowload.bookname
+                        td.text-center=bookdowload.firstname+' '+bookdowload.lastname
+                        td.text-center
+                          a(href="")=bookdowload.bookDowload.length
+                        td.text-center
