--- a/views/manageteacher.pug
+++ b/views/manageteacher.pug
@@ -8,7 +8,6 @@ block content
         a(href='/managefac') ข้อมูลคณะ
         a.active(href='/manageteacher') ข้อมูลอาจารย์
         a(href='/manageuser') ข้อมูลสมาชิก
-        a(href='/managedowload') ข้อมูลการดาวน์โหลด
         a(href='/managerefer') ข้อมูลการขอสิทธิ์
     .col-md-7
       .container
@@ -19,26 +18,47 @@ block content
             h4 เพิ่มข้อมูลอาจารย์
             form(action="/teacher/create", method="post")
               .d-flex
-                input.form-control.form-control-sm(type="text" name="firstname" placeholder="ชื่อ" required)
+                input.form-control(type="text" name="firstname" placeholder="ชื่อ" required)
                 div(style="width:5px")
-                input.form-control.form-control-sm(type="text" name="lastname" placeholder="นามสกุล" required)
+                input.form-control(type="text" name="lastname" placeholder="นามสกุล" required)
                 div(style="width:5px")
-                button.btn.btn-success(type="submit") +
+              input.form-control.mt-3(type="text" name="email" placeholder="อีเมล" required)
+              -var password = Math.floor(Math.random() * 1000000)
+              input(type="hidden", name="password" value=password)
+              .d-flex.justify-content-center.mt-3
+                button.btn.btn-success(type="submit") เพิ่ม
             -let=i=0
             table.table.mt-3
               thead
                 tr
                   th(scope='col') ลำดับ
                   th(scope='col') ชื่อ
-                  th(scope='col') สกุล
+                  th(scope='col') อีเมล
+                  th(scope='col') รหัสผ่าน
                   th(scope='col')
               tbody
                 each teachers in teacher
                     tr
                       th(scope='row')=i=i+1
-                      td=teachers.firstname
-                      td=teachers.lastname
+                      td=teachers.firstname + ' ' + teachers.lastname
+                      td=teachers.email
+                      td
+                        if teachers.oldpassword
+                          a.text-danger(href="#" onclick=`showpassword(event,${teachers.oldpassword})`) ยังไม่ได้เปลี่ยนรหัสผ่าน(คลิ๊กเพื่อดู)
+                        else
+                          div เปลี่ยนรหัสแล้ว
                       td.d-flex
-                        a.btn.btn-warning.btn-sm(href="") แก้ไข
-                        div(style="width:5px")
-                        a.btn.btn-danger.btn-sm(href="") ลบ
+                        button.btn.btn-sm.btn-danger(onclick=`deleteTeachers('${teachers.id}')`) ลบ
+
+    script.
+      function showpassword (event,password) {
+        const parent = event.target.parentNode
+        event.target.innerText = event.target.innerText === 'ยังไม่ได้เปลี่ยนรหัสผ่าน(คลิ๊กเพื่อดู)' ? password : 'ยังไม่ได้เปลี่ยนรหัสผ่าน(คลิ๊กเพื่อดู)'
+      }
+      function deleteTeachers(id) {
+        if (confirm('ต้องการลบใช่หรือไม่') == true) {
+          location.replace(`/teachers/delete/${id}`)
+        } else {
+          console.log('cancel')
+        }
+      }
