--- a/views/manageuser.pug
+++ b/views/manageuser.pug
@@ -4,11 +4,10 @@ block content
     .col-md-3
       include ./components/sidebar
       .sidebar
-        a(href='/managebook') ข้อมูลปริญญานิพนธ์
+        a(href='/managerefer') ข้อมูลปริญญานิพนธ์
         a(href='/managefac') ข้อมูลคณะ
         a(href='/manageteacher') ข้อมูลอาจารย์
         a.active(href='/manageuser') ข้อมูลสมาชิก
-        a(href='/managerefer') ข้อมูลการขอสิทธิ์
     .col-md-7
       .container.mt-3
         include ./components/alert
