--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -14,7 +14,7 @@ div(style='background-color:#2759be;')
             h5 เกี่ยวกับระบบ
           if user
             if user.admin
-              a.nav-link.text-center.m-3.text-light(href="/managefac")
+              a.nav-link.text-center.m-3.text-light(href="/managerefer")
                 h5 จัดการข้อมูล
             if !user.admin
               a.nav-link.text-center.m-3.text-light(href='/status')
