--- a/views/managerefer.pug
+++ b/views/managerefer.pug
@@ -5,7 +5,7 @@ block content
       include ./components/sidebar
       .sidebar
         a.active(href='/managerefer') ข้อมูลปริญญานิพนธ์
-        a(href='/managefac') ข้อมูลคณะ
+        a(href='/managecategory') ข้อมูลหมวดหมู่
         a(href='/manageteacher') ข้อมูลอาจารย์
         a(href='/manageuser') ข้อมูลสมาชิก
     .col-md-7
