--- a/views/index.pug
+++ b/views/index.pug
@@ -32,16 +32,16 @@ block content
         ul.list-group
           li.list-group-item.list-group-item-info
             h4 อาจารย์ที่ปรึกษา
-          //- each teacher in teachers
-          //-   li.list-group-item
-          //-     a(href="/")=teacher.firstname+' '+teacher.lastname
+          each teacher in teachers
+            li.list-group-item
+              a(href="/")=teacher.firstname+' '+teacher.lastname
       .col-md-6.mt-3
         ul.list-group
           li.list-group-item.list-group-item-info
             h4 หมวดหมู่ปริญญานิพนธ์
-          //- each category in categorys
-          //-   li.list-group-item
-          //-     a(href="/")=category.name
+          each category in categorys
+            li.list-group-item
+              a(href="/")=category.name
 
     .row.justify-content-evenly
       .col-md-3.text-center.card.mt-3
