--- a/views/book.pug
+++ b/views/book.pug
@@ -1,40 +1,46 @@
 extends layout/main
 block content
-  .container.mt-3
-    .card
-      form(action="/bookcreate" method="post" enctype="multipart/form-data").m-3
-        h1.text-center ลงทะเบียนปริญญานิพนธ์
-        .d-flex
-          h4(style="width:90px;") ชื่อ
-          h4 : #{user.firstname}
-        .d-flex
-          h4(style="width:90px;") นามสกุล
-          h4 : #{user.lastname}
-        .d-flex
-          h4(style="width:90px;") คณะ
-          h4 : #{user.faculty}
-        .d-flex
-          h4(style="width:90px;") สาขา
-          h4 : #{user.branch}
-        .form-floating
-          input(type="hidden", name="user" value=user)
-          input#floatingbookname.form-control(type="text", name="bookname" placeholder="ชื่อปริญญานิพนธ์")
-          label(for='floatingbookname') ชื่อปริญญานิพนธ์
-        .form-floating.mt-3
-          select#floatingSelect.form-select(name='teacher')
-            option(selected='') กรุณาเลือก
-            each teacher in teachers
-              option(value=teacher.firstname)=teacher.firstname + ' ' + teacher.lastname
-          label(for="floatingSelect") อาจารย์ที่ปรึกษา
-        .form-floating.mt-3
-          select#floatingSelect.form-select(name='category')
-            option(selected='') กรุณาเลือก
-            each category in categorys
-              option(value=category.name)=category.name
-          label(for="floatingSelect") หมวดหมู่
-        .mt-3
-          label(for="bookfile") เพิ่มไฟล์(PDF)
-          input.form-control#bookfile(type="file", name="bookfile"  accept="application/pdf" required)
-        .mt-3.text-center
-          button.btn.btn-primary(type="submit")  ลงทะเบียน
+  if user.studentnumber
+    .container.mt-3
+      .card
+        form(action="/bookcreate" method="post" enctype="multipart/form-data").m-3
+          h1.text-center ลงทะเบียนปริญญานิพนธ์
+          .d-flex
+            h4(style="width:90px;") ชื่อ
+            h4 : #{user.firstname}
+          .d-flex
+            h4(style="width:90px;") นามสกุล
+            h4 : #{user.lastname}
+          .d-flex
+            h4(style="width:90px;") คณะ
+            h4 : #{user.faculty}
+          .d-flex
+            h4(style="width:90px;") สาขา
+            h4 : #{user.branch}
+          .form-floating
+            input(type="hidden", name="user" value=user)
+            input#floatingbookname.form-control(type="text", name="bookname" placeholder="ชื่อปริญญานิพนธ์")
+            label(for='floatingbookname') ชื่อปริญญานิพนธ์
+          .form-floating.mt-3
+            select#floatingSelect.form-select(name='teacher')
+              option(selected='') กรุณาเลือก
+              each teacher in teachers
+                option(value=teacher.firstname)=teacher.firstname + ' ' + teacher.lastname
+            label(for="floatingSelect") อาจารย์ที่ปรึกษา
+          .form-floating.mt-3
+            select#floatingSelect.form-select(name='category')
+              option(selected='') กรุณาเลือก
+              each category in categorys
+                option(value=category.name)=category.name
+            label(for="floatingSelect") หมวดหมู่
+          .mt-3
+            label(for="bookfile") เพิ่มไฟล์(PDF)
+            input.form-control#bookfile(type="file", name="bookfile"  accept="application/pdf" required)
+          .mt-3.text-center
+            button.btn.btn-primary(type="submit")  ลงทะเบียน
+  else
+    .container.mt-3
+      .card
+        .card-body
+          h1.text-danger.text-center ลงทะเบียนได้เฉพาะนักศึกษาในสาขาระบบสารสนเทศ
 
