--- a/views/index.pug
+++ b/views/index.pug
@@ -6,22 +6,7 @@ block content
     .container.d-flex.justify-content-center.align-items-center
       img(src="index.png" style="width:68.125rem", alt="")
   .container.mt-3
-    .card.mt-3
-      .card-body
-        form
-          input.form-control(type="text", name="",placeholder="ค้นหาเลย")
-          .row.mt-3
-            .col-md-6
-              select#floatingSelect.form-select(name='category')
-                option(selected='') กรุณาเลือกหมวดหมู่ปริญญานิพนธ์
-                each category in categorys
-                  option(value=category.name)=category.name
-            .col-md-6
-              select.form-select(name='teacher')
-                option(selected='') กรุณาเลือกอาจารย์ที่ปรึกษา
-                each teacher in teachers
-                  option(value=teacher.firstname)=teacher.firstname + ' ' + teacher.lastname
-          input.btn.btn-success.mt-2(type="button", value="ค้นหา")
+    include components/searchbox
     .row
       .col-md-6.mt-3
         ul.list-group
