--- a/views/search.pug
+++ b/views/search.pug
@@ -3,22 +3,7 @@ block content
   .container.mt-3
     include components/alert
     h1 ค้นหาฐานข้อมูลปริญญานิพนธ์
-    .card.mt-3
-      .card-body
-        form(action=`#`)
-          input.form-control(type="text", name="keyword",placeholder="ค้นหาเลย")
-          .row.mt-3
-            .col-md-6
-              select#floatingSelect.form-select(name='category')
-                option(disabled selected  ) กรุณาเลือกหมวดหมู่ปริญญานิพนธ์
-                each category in categorys
-                  option(value=category.name)=category.name
-            .col-md-6
-              select.form-select(name='teacher')
-                option(disabled selected) กรุณาเลือกอาจารย์ที่ปรึกษา
-                each teacher in teachers
-                  option(value=teacher.firstname)=teacher.firstname + ' ' + teacher.lastname
-          input.btn.btn-success.mt-2(type="submit", value="ค้นหา")
+    include components/searchbox
     .card.mt-3
       .card-body
         h1.text-center ข้อมูลปริญญานิพนธ์ทั้งหมด
