--- a/views/search.pug
+++ b/views/search.pug
@@ -7,25 +7,29 @@ block content
     .card.mt-3
       .card-body
         h1.text-center ข้อมูลปริญญานิพนธ์ทั้งหมด
-        table.table
-          thead
-            tr
-              th(scope='col')
-              th(scope='col') ชื่อปริญญานิพนธ์
-              th(scope='col') หมวดหมู่
-              th(scope='col') ผู้จัดทำ
-              th(scope='col') อาจารย์ที่ปรึกษา
-              th(scope='col') สาขา
-          tbody
-            -let i=0
-            each books in book
+        if book[0]
+          table.table
+            thead
               tr
-                th(scope='row')=i=i+1
-                td
-                  a(href=`/book/detail/${books._id}`) #{books.bookname}
-                td=books.category
-                td=books.firstname+' '+books.lastname
-                td=books.teacher
-                td=books.branch
+                th(scope='col')
+                th(scope='col') ชื่อปริญญานิพนธ์
+                th(scope='col') หมวดหมู่
+                th(scope='col') ผู้จัดทำ
+                th(scope='col') อาจารย์ที่ปรึกษา
+                th(scope='col') สาขา
+            tbody
+              -let i=0
+              each books in book
+                tr
+                  th(scope='row')=i=i+1
+                  td
+                    a(href=`/book/detail/${books._id}`) #{books.bookname}
+                  td=books.category
+                  td=books.firstname+' '+books.lastname
+                  td=books.teacher
+                  td=books.branch
+        else
+          h1.text-center.text-warning ไม่พบข้อมูล
+
 
 
