--- a/views/about.pug
+++ b/views/about.pug
@@ -11,4 +11,4 @@ block content
         p ชื่อ - สกุล:อาจารย์มงคล
         h5 พัฒนาระบบ:
         p ชื่อ - สกุล:นายพัชรพล ห่วงไทย
-        p ชื่อ - สกุล:นายภูริน ชาติดร
+        p ชื่อ - สกุล:นายภูรินทร์ ชาติดร
